--- a/front/package.json
+++ b/front/package.json
@@ -15,6 +15,7 @@
     "@babel/preset-env": "^7.16.7",
     "@babel/preset-typescript": "^7.16.7",
     "@types/jest": "^27.4.0",
+    "@types/lodash": "^4.14.184",
     "@types/node": "^18.7.15",
     "@types/react": "^18.0.5",
     "@types/react-dom": "^18.0.1",
@@ -24,6 +25,7 @@
     "babel-jest": "^27.4.6",
     "jest": "^27.4.7",
     "jest-extended": "^2.0.0",
+    "loadash": "^1.0.0",
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8",
     "typescript": "^4.5.4"
@@ -37,11 +39,16 @@
   "dependencies": {
     "@headlessui/react": "^1.7.0",
     "@heroicons/react": "^2.0.10",
+    "axios": "^0.27.2",
     "path": "^0.12.7",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
+    "react-spring": "^9.5.3",
+    "react-timer-hook": "^3.0.5",
+    "socket.io-client": "^4.5.2",
     "styled-components": "^5.3.5",
+    "uuid": "^9.0.0",
     "vite": "^3.1.0"
   }
 }
