--- a/front/tsconfig.json
+++ b/front/tsconfig.json
@@ -23,8 +23,8 @@
     },
   },
   "include": [
-    "src/**/*.ts"
-, "src/App.tsx"  ],
+    "./src"
+  ],
   "references": [
     {
       "path": "./tsconfig.node.json"
